--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,12 +1,12 @@
 .home {
     text-align: center;
-    color: #fff;
+    /* color: #fff; */
 }
-  
+
 .logo {
     margin: 20px 0;
 }
-  
+
 .title {
     padding: 0;
     margin: 20px 0;
