--- a/src/counter/counter.css
+++ b/src/counter/counter.css
@@ -1,4 +1,13 @@
 .header {
     margin: 0;
     padding: 10px 0;
+    /* color: #eee; */
+}
+
+.negative {
+    color: red;
+}
+
+.positive {
+    color: blue;
 }
