--- a/src/home/index.twig
+++ b/src/home/index.twig
@@ -14,5 +14,5 @@
     <h1 class="{{ styles.title }}">
         {{ message }}
     </h1>
-    {% mount '../counter' with { count: 5 } %}
+    {% mount '../counter' as 'counter' with { count: 5 } %}
 </main>
